--- a/style.css
+++ b/style.css
@@ -1,58 +1,97 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap');
-
-*{
-    font-family: 'Oswald', sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
-/* Reset some default styles */
-body, h1, p {
-    margin: 0;
-    padding: 0;
+body {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: #eeeded;
 }
 
-/* Define the styles for the header */
 header {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 20px;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  background-color: #be1349;
+  display: grid;
+  place-items: center;
+  color: white;
 }
 
-.logo img {
-    width: 100px;
-    height: 100px;
+.nav {
+  padding: 20px;
 }
 
-/* Define the styles for the main content */
-main {
-    text-align: center;
-    padding: 20px;
+.nav ul {
+  display: flex;
+  gap: 20px;
+  text-transform: uppercase;
+  list-style: none;
 }
 
-.description {
-    margin-bottom: 20px;
+.container {
+  width: 90%;
+  display: flex;
+  justify-content: center;
+  gap: 40px;
 }
 
-/* Style the download button */
-.github-button {
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: #333;
-    color: #fff;
-    text-decoration: none;
-    font-weight: bold;
-    border: none;
-    border-radius: 5px;
+.container .logo {
+  width: 50%;
+  text-align: right;
 }
 
-.github-button:hover {
-    background-color: #555;
+.container .logo img {
+  width: 60%;
 }
 
-/* Style the footer */
+.container .content {
+  width: 50%;
+  padding-top: 50px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.container .content p {
+  max-width: 400px;
+  font-size: 0.9rem;
+  text-align: justify;
+}
+
 footer {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 10px;
+  width: 100%;
+  background-color: #be1349;
+  position: absolute;
+  bottom: 0;
+  padding: 10px;
+  color: white;
+}
+
+.download {
+  background-color: #be1349;
+  border-radius: 10px;
+  max-width: 200px;
+  transition: 0.5s all ease-in-out;
+}
+
+.download a {
+  display: grid;
+  place-items: center;
+  padding: 10px 20px;
+  color: white;
+  font-weight: 500;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.download:hover {
+  background-color: #e93347;
 }
